# physim

./: .gitignore  .gitmessage  .pre-commit-config.yaml  Cargo.toml  debug_pipeline.toml  ffmpeg.md  install.sh  licence  package.sh  pipeline.toml  readme.md
.github/workflows/: branch.yml  ci.yml  deploy.yml  release.yml
astro/: Cargo.toml
astro/benches/: octree.rs  quadtree.rs
astro/src/: initialisers.rs  lib.rs  octree.rs  quadtree.rs  transformers.rs
c_plugin/: makefile  physim.h  plugin.c
debug/: Cargo.toml
debug/src/: crashers.rs  energysink.rs  lib.rs
example_pipelines/: bbox.toml  debug_pipeline.toml  energysink.toml  shm.toml  solar.toml  wrapper.toml
example_plugin/: Cargo.toml  build.rs
example_plugin/src/: lib.rs
glrender/: Cargo.toml
glrender/src/: lib.rs  shader.frag
glrender/src/id/: rgb.vert  shader.frag
glrender/src/velocity/: blue-green.vert  hot.vert  orange-blue.vert  psychedelic.vert  rgb-velocity.vert  shader.frag  shader.geom  shader.vert  smoke.vert  twinkle.vert
glrender/src/yellowblue/: shader.frag  shader.geom  shader.vert
integrators/: Cargo.toml
integrators/src/: euler.rs  lib.rs  rk4.rs  verlet.rs
mechanics/: Cargo.toml  build.rs
mechanics/src/: collisions.rs  impulse.rs  lib.rs  shm.rs
physim-attribute/: Cargo.toml
physim-core/: Cargo.toml  cbindgen.toml
physim-core/src/: help.txt  lib.rs  main.rs  messages.rs  pipeline.rs  scanner.rs
physim-core/src/examples/: messages.rs
physim-core/src/plugin/: discover.rs  generator.rs  initialiser.rs  integrator.rs  meta.rs  mod.rs  render.rs  synth.rs  transform.rs  transmute.rs
physim-manual/: book.toml
physim-manual/src/: README.md  SUMMARY.md  boiler_plate.md  ffmpeg.md  installation.md  plugin_intro.md  transform.md  usage.md
physim_attribute/: Cargo.toml
physim_attribute/src/: lib.rs
src/: lib.rs  main.rs  stars.rs
src/octree/: fancy.rs  mod.rs  simple.rs
src/quadtree/: second.rs  simple.rs
src/render/: mod.rs  shader.frag  shader.geom  shader.vert
src/tree/: safe.rs
utilities/: Cargo.toml
utilities/src/: bbox.rs  bpm.rs  csvsink.rs  idset.rs  lib.rs  wrapper.rs
