[workspace]
resolver = "2"
members = [ "astro","physim-core","glrender", "physim_attribute", "debug", "integrators"]

[workspace.package]
authors = ["Joseph Briggs <jhbriggs23@gmail.com>"]
license = "MIT"
repository = "https://github.com/jhb123/physim"
version = "0.2.0"

[profile.release]
debug = true
