[workspace]
resolver = "2"
members = [ "astro","physim-core","glrender", "physim_attribute", "debug", "integrators", "utilities", "mechanics"]
default-members = [ "astro","physim-core","glrender", "physim_attribute", "integrators", "utilities", "mechanics"]


[workspace.package]
authors = ["Joseph Briggs <jhbriggs23@gmail.com>"]
license = "MIT"
repository = "https://github.com/jhb123/physim"
version = "0.3.0"

[profile.release]
debug = true
