[workspace]
resolver = "2"
members = [ "astro","physim-core","glrender", "physim-attribute", "debug", "integrators", "utilities", "mechanics"]
default-members = [ "astro","physim-core","glrender", "physim-attribute", "integrators", "utilities", "mechanics"]


[workspace.package]
authors = ["Joseph Briggs <jhbriggs23@gmail.com>"]
license = "MIT"
repository = "https://github.com/jhb123/physim"
version = "0.3.0"

[workspace.dependencies]
physim-core = { path = "physim-core" }
physim-attribute = { path = "physim-attribute" }

[profile.release]
debug = true
