[package]
name = "astro"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["dylib","rlib"]

[dependencies]
bumpalo = {version="3.17.0",features=["boxed"]}
physim-core = { workspace = true }
physim-attribute = { workspace = true }
serde_json = "1.0.140"
rand_chacha = "0.9.0"
serde = {version="1.0.219",features = ["derive"]}
rand = "0.9.0"
rand_distr = "0.5.1"

[build-dependencies]
rustc_version = "0.4.1"

[profile.release]
debug = false
opt-level = 3
lto = true
panic = "abort"
strip = "debuginfo"
