[package]
name = "debug"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
physim-core = { path = "../physim-core" }
physim_attribute = { path = "../physim_attribute" }
serde_json = "1.0.140"
serde = {version="1.0.219",features = ["derive"]}
rand = "0.9.1"

[build-dependencies]
rustc_version = "0.4.1"
