[package]
name = "glrender"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
physim-core = { path = "../physim-core" }
physim_attribute = { path = "../physim_attribute" }
glium = "0.36.0"
serde_json = "1.0.140"
