[package]
name = "glrender"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
physim-core = { path = "../physim-core" }
physim-attribute = { path = "../physim-attribute" }
glium = "0.36.0"
serde_json = "1.0.140"

[build-dependencies]
rustc_version = "0.4.1"
