[package]
name = "integrators"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
physim-core = { path = "../physim-core" }
physim-attribute = { path = "../physim-attribute" }
serde_json = "1.0.140"

[build-dependencies]
rustc_version = "0.4.1"
