[package]
name = "mechanics"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
physim-core = { path = "../physim-core" }
physim_attribute = { path = "../physim_attribute" }
serde_json = "1.0.140"
serde = {version="1.0.219",features = ["derive"]}
rand = "0.9.1"
ahash = "0.8.12"

[build-dependencies]
rustc_version = "0.4.1"
