[package]
name = "physim-attribute"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Macros for creating physim plugins"

[lib]
name = "physim_attribute"
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
