[package]
name = "physim-core"
version.workspace = true
edition = "2021"
default-run = "physcan"
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Library for creating N-Body physics simulations"
readme.workspace = true

[lib]
name = "physim_core"
crate-type = ["rlib", "cdylib"]

[dependencies]
env_logger = "0.11.6"
libloading = "0.8.6"
log = "0.4.25"
once_cell = "1.21.3"
rand = "0.9.0"
rand_chacha = "0.9.0"
serde = {version="1.0.219",features = ["derive"]}
serde_json = "1.0.140"
terminal-colorsaurus = "1.0.1"
toml = "0.8.20"
yansi = "1.0.1"

[build-dependencies]
rustc_version = "0.4.1"


[[bin]]
name = "physcan"
path = "src/bin/scanner.rs"

[[bin]]
name = "physim"
path = "src/main.rs"

[[example]]
name = "msg"
path = "src/examples/messages.rs"
